# hanon-trainer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
corpus/: README.md  source-pdfs-manifest.tsv
corpus/catalog/: variants.tsv
corpus/manual-input/templates/: midi_fixture_events.tsv  overlay_steps.tsv
corpus/overlays/: overlay_metadata.tsv  overlay_steps.tsv
docs/: ARCHITECTURE.md  BACKLOG-HANON-01C-VIEWER-PILOT.md  BACKLOG-REFINEMENT.md  CONTENT_PIPELINE.md  DATA_MODEL.md  LOCAL_SPEC.md  OPEN_QUESTIONS.md  PORTABLE-C-TEXT-PARSING.md  REVIEW-HANON-01C-PILOT-ANALYSIS-DATA-SLICE.md  REVIEW-HANON-MIDI-HAL-PLAN.md  REVIEW-SPRINT-001.md  REVIEW-VERTICAL-SLICE-PRE-MANUAL-INPUT.md  SPRINT-001-PILOT-TRAINER.md  UI_CONCEPT.md
docs/ADR/: ADR-0001-sdl2-custom-ui.md  ADR-0002-mirrored-score-assets.md  ADR-0003-guide-only-v1.md  ADR-0004-local-only-offline-posture.md  ADR-0005-sqlite-local-store.md  ADR-0006-midi-ingress-for-captured-takes.md  ADR-0007-post-session-pitch-and-timing-analysis.md  ADR-0008-explicit-local-codex-cli-advice.md  ADR-0009-c-library-boundaries-and-interface-discipline.md
docs/manual-input/: hanon-01-c-checklist.md
include/hanon_trainer/: advice_orchestrator.h  advice_orchestrator.h.md  codex_cli_adapter.h  codex_cli_adapter.h.md  content_catalog.h  content_catalog.h.md  guidance_renderer.h  guidance_renderer.h.md  ht_types.h  ht_types.h.md  midi_capture.h  midi_capture.h.md  overlay_store.h  overlay_store.h.md  performance_analysis.h  performance_analysis.h.md  score_renderer.h  score_renderer.h.md  session_core.h  session_core.h.md  sqlite_store.h  sqlite_store.h.md
include/hanon_trainer/internal/: c23_fallback.h  c23_fallback.h.md
scripts/: setup-dev-env.sh
src/: advice_orchestrator.c  advice_orchestrator.c.md  codex_cli_adapter.c  codex_cli_adapter.c.md  content_catalog.c  content_catalog.c.md  guidance_renderer.c  guidance_renderer.c.md  ht_types.c  ht_types.c.md  midi_capture.c  midi_capture.c.md  midi_decode.c  midi_decode.c.md  midi_decode.h  midi_hal.h  midi_hal_alsa.c  midi_hal_alsa.c.md  midi_hal_coremidi.c  midi_hal_coremidi.c.md  midi_hal_fake.c  midi_hal_fake.c.md  midi_hal_winmm.c  midi_hal_winmm.c.md  overlay_store.c  overlay_store.c.md  performance_analysis.c  performance_analysis.c.md  score_renderer.c  score_renderer.c.md  session_core.c  session_core.c.md  sqlite_store.c  sqlite_store.c.md
tests/: test_advice_orchestrator.c  test_advice_orchestrator.c.md  test_catalog.c  test_catalog.c.md  test_hanon_01c_pilot_analysis.c  test_hanon_01c_pilot_analysis.c.md  test_hanon_01c_viewer_projection.c  test_hanon_01c_viewer_projection.c.md  test_midi_decode.c  test_midi_decode.c.md  test_midi_hal_fake.c  test_midi_hal_fake.c.md  test_overlay_store.c  test_overlay_store.c.md  test_performance_analysis.c  test_performance_analysis.c.md  test_platform_boundaries.c  test_platform_boundaries.c.md  test_score_renderer_layout.c  test_score_renderer_layout.c.md  test_score_renderer_ppm.c  test_score_renderer_ppm.c.md  test_sqlite_store.c  test_sqlite_store.c.md
tests/fixtures/bad-overlay/overlays/: overlay_metadata.tsv
tests/fixtures/hanon-01-c/: late-onset.tsv  missing-note.tsv  perfect.tsv  wrong-note.tsv
tests/fixtures/pc4-live-midi/: 2026-04-25-pc4-generic-rhodes-audio-aseq-001.meta.json  2026-04-25-pc4-generic-rhodes-audio-aseq-001.raw.tsv  2026-04-25-pc4-prophet-pad-big-old-jupy-audio-aseq-001.meta.json  2026-04-25-pc4-prophet-pad-big-old-jupy-audio-aseq-001.raw.tsv  2026-04-26-pc4-freetake3-001.meta.json  2026-04-26-pc4-freetake3-001.raw.tsv  2026-04-26-pc4-fretake-rawmidi-001.meta.json  2026-04-26-pc4-fretake-rawmidi-001.raw.tsv  2026-04-26-pc4-fretake1-001.meta.json  2026-04-26-pc4-fretake1-001.raw.tsv  2026-04-26-pc4-fretake2-001.meta.json  2026-04-26-pc4-fretake2-001.raw.tsv  2026-04-26-pc4-guided-rhodes-tui-smoke-001.meta.json  2026-04-26-pc4-guided-rhodes-tui-smoke-001.raw.tsv  2026-04-26-pc4-mod-wheel-001.meta.json  2026-04-26-pc4-mod-wheel-001.raw.tsv  2026-04-26-pc4-rhodes-free-improv-manual-001.meta.json  2026-04-26-pc4-rhodes-free-improv-manual-001.raw.tsv  2026-04-26-pc4-rhodes-free-improv-manual-002.meta.json  2026-04-26-pc4-rhodes-free-improv-manual-002.raw.tsv  2026-04-26-pc4-take2-001.meta.json  2026-04-26-pc4-take2-001.raw.tsv  2026-04-26-pc4-tui-002.meta.json  2026-04-26-pc4-tui-002.raw.tsv  README.md
tests/fixtures/synthetic-corpus/catalog/: variants.tsv
tests/fixtures/synthetic-corpus/overlays/: overlay_metadata.tsv  overlay_steps.tsv
tests/fixtures/synthetic-pc4-capture/: README.md  pc4-aftertouch-arpeggio.mid  pc4-aftertouch-arpeggio.tsv  source-mamut-trace.txt
tests/fixtures/viewer-corpus/assets/: bad-magic.ppm  bad-max.ppm  malformed-header.ppm  short-payload.ppm  synthetic-score.ppm
tests/fixtures/viewer-corpus/catalog/: variants.tsv
tests/fixtures/viewer-corpus/overlays/: overlay_metadata.tsv  overlay_steps.tsv
tests/tools/: check_asset_generation.py  check_companion_docs.py  check_header_graph.py  check_header_independence.py  check_identifier_discipline.py  check_midi_probe_cli.py  check_pc4_fixture_schema.py  check_pc4_live_midi_fixtures.py  check_viewer_snapshot_cli.py  export_pc4_live_midi_fixtures.py
tools/: ht_midi_probe.c  ht_midi_probe.c.md  ht_viewer_snapshot.c  ht_viewer_snapshot.c.md
